@@ -1,3 +1,8 @@
+2002-07-09  Mark McLoughlin  <mark@skynet.ie>
+
+	* gconf/gconfd.c: (obtain_database): fix
+	silly with addresses list.
+
 2002-07-04  Havoc Pennington  <hp@pobox.com>
 
 	* gconf/gconfd.c (logfile_read): close our FILE* when we're done.
